--- a/style.css
+++ b/style.css
@@ -294,7 +294,7 @@ header {
     background-image: url(/images/family-background.webp);
     background-size: cover;
     background-position: top right;
-    height: 100svh; 
+    height: 100vh; 
     align-items: center;
     justify-content: center;
     align-content: center;
