added metatag for image on google search

--- a/style.css
+++ b/style.css
@@ -679,7 +679,7 @@ select option[value=""][disabled] {
 /*FAQ-Start Divider*/
 .custom-shape-divider-top-1727206977 {
     position: absolute;
-    top: 0;
+    top: -1px;
     left: 0;
     width: 100%;
     overflow: hidden;
